--- a/src/main/resources/vm/manage/internal.vm
+++ b/src/main/resources/vm/manage/internal.vm
@@ -40,7 +40,7 @@
 
 </div>
 
-<table class="layui-table" id="tab_ram" lay-filter="tab_ram" style="margin-top: 20px">
+<table class="layui-table info" id="tab_ram" lay-filter="tab_ram">
     <thead>
     <tr>
         <th>进程id</th>
@@ -76,6 +76,40 @@
         #else
         <tr>
             <td colspan=12 style="text-align:center">无数据</td>
+        </tr>
+        #end
+    </tbody>
+</table>
+
+<div class="info">端口信息</div>
+<table class="layui-table" style="margin-top: 10px">
+    <thead>
+    <tr>
+        <th>连接协议</th>
+        <th>接收队列</th>
+        <th>发送队列</th>
+        <th>本地地址</th>
+        <th>远程地址</th>
+        <th>状态</th>
+        <th>进程id/项目名称</th>
+    </tr>
+    </thead>
+    <tbody>
+        #if($port)
+            #foreach($item in $!port)
+            <tr>
+                <td>$!item.protocol</td>
+                <td>$!item.receive</td>
+                <td>$!item.send</td>
+                <td>$!item.local</td>
+                <td>$!item.foreign</td>
+                <td>$!item.status</td>
+                <td>$!item.name</td>
+            </tr>
+            #end
+        #else
+        <tr>
+            <td colspan=7 style="text-align:center">无数据</td>
         </tr>
         #end
     </tbody>
