--- a/src/main/resources/vm/system/nginx.vm
+++ b/src/main/resources/vm/system/nginx.vm
@@ -78,7 +78,7 @@
     var index = 0;
 
     function loadSuccess() {
-        var uploadConfig, hashSelectConfig;
+        var uploadConfig, hashSelectConfig, uploadPath;
         layui.use(['upload'], function () {
             var upload = layui.upload;
             uploadConfig = upload.render({
@@ -94,11 +94,12 @@
                 },
                 before: function (obj) { //obj参数包含的信息，跟 choose回调完全一致，可参见上文。
                     layer.load(); //上传loading
+                    this.data = {whitePath: uploadPath}
                 },
                 done: function (res) {
                     layer.closeAll('loading');
                     layer.msg(res.msg);
-                    if (200 == data.code) {
+                    if (200 == res.code) {
                         layer.closeAll('page');
                         // 刷新表
                         table.reload('tab_ngx');
@@ -204,8 +205,8 @@
                 btnAlign: 'c',
                 btn: ['提交'],
                 yes: function (index, layero) {
-                    var val = $("#whitePath").val();
-                    if (!val || val === "") {
+                    uploadPath = $("#whitePath").val();
+                    if (!uploadPath || uploadPath === "") {
                         layer.msg("请选择白名单路径")
                         return;
                     }
