--- a/src/main/resources/vm/manage/internal.vm
+++ b/src/main/resources/vm/manage/internal.vm
@@ -32,34 +32,30 @@
 
 <body>
 <div>
-    <a class="but" href="/manage/stack?tag=$!internal.tag">导出堆栈信息</a>
-    <a class="but" href="/manage/ram?tag=$!internal.tag">导出内存信息</a>
-##    <div class="info">
-##        $!internal.ram
-##    </div>
-
+    <a class="but" href="/manage/stack?tag=$!tag">导出堆栈信息</a>
+    <a class="but" href="/manage/ram?tag=$!tag">导出内存信息</a>
 </div>
-
-<table class="layui-table info" id="tab_ram" lay-filter="tab_ram">
-    <thead>
-    <tr>
-        <th>进程id</th>
-        <th>所有者</th>
-        <th>优先级</th>
-        <th>nice值</th>
-        <th>使用虚拟内存</th>
-        <th>使用物理内存</th>
-        <th>共享内存</th>
-        <th>进程状态</th>
-        <th>占用CPU</th>
-        <th>占用物理内存</th>
-        <th>时间总计</th>
-        <th>进程名称</th>
-    </tr>
-    </thead>
-    <tbody>
-        #if($mem)
-            #foreach($item in $mem)
+<div class="info">
+    <label>系统内存</label>
+    <table class="layui-table" id="tab_ram" lay-filter="tab_ram">
+        <thead>
+        <tr>
+            <th>进程id</th>
+            <th>所有者</th>
+            <th>优先级</th>
+            <th>nice值</th>
+            <th>使用虚拟内存</th>
+            <th>使用物理内存</th>
+            <th>共享内存</th>
+            <th>进程状态</th>
+            <th>占用CPU</th>
+            <th>占用物理内存</th>
+            <th>时间总计</th>
+            <th>进程名称</th>
+        </tr>
+        </thead>
+        <tbody>
+            #if($item)
             <tr>
                 <td>$!item.pid</td>
                 <td>$!item.USER</td>
@@ -74,77 +70,83 @@
                 <td>$!item.TIME</td>
                 <td>$!item.COMMAND</td>
             </tr>
-            #end
-        #else
-        <tr>
-            <td colspan=12 style="text-align:center">无数据</td>
-        </tr>
-        #end
-    </tbody>
-</table>
-
-<div class="info">端口信息</div>
-<table class="layui-table" style="margin-top: 10px">
-    <thead>
-    <tr>
-        <th>连接协议</th>
-        <th>接收队列</th>
-        <th>发送队列</th>
-        <th>本地地址</th>
-        <th>远程地址</th>
-        <th>状态</th>
-        <th>进程id/项目名称</th>
-    </tr>
-    </thead>
-    <tbody>
-        #if($port)
-            #foreach($item in $!port)
+            #else
             <tr>
-                <td>$!item.protocol</td>
-                <td>$!item.receive</td>
-                <td>$!item.send</td>
-                <td>$!item.local</td>
-                <td>$!item.foreign</td>
-                <td>$!item.status</td>
-                <td>$!item.name</td>
+                <td colspan=12 style="text-align:center">无数据</td>
             </tr>
             #end
-        #else
+        </tbody>
+    </table>
+</div>
+
+    #if($beanMem)
+    <div class="info">
+        <label> jvm内存</label>
+        <table class="layui-table" style="margin-top: 10px">
+            <thead>
+            <tr>
+                <th>已使用堆内存</th>
+                <th>占用堆内存</th>
+                <th>已分配堆内存</th>
+                <th>已使用非堆内存</th>
+                <th>占用非堆内存</th>
+                <th>已分配非堆内存</th>
+                <th>挂起的对象</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>$!beanMem.heapUsed</td>
+                <td>$!beanMem.heapProportion</td>
+                <td>$!beanMem.heapCommitted</td>
+                <td>$!beanMem.nonHeapUsed</td>
+                <td>$!beanMem.nonHeapProportion</td>
+                <td>$!beanMem.nonHeapCommitted</td>
+                <td>$!beanMem.mount</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    #end
+
+<div class="info">
+    <label>端口信息</label>
+    <table class="layui-table" style="margin-top: 10px">
+        <thead>
         <tr>
-            <td colspan=7 style="text-align:center">无数据</td>
+            <th>连接协议</th>
+            <th>接收队列</th>
+            <th>发送队列</th>
+            <th>本地地址</th>
+            <th>远程地址</th>
+            <th>状态</th>
+            <th>进程id/项目名称</th>
         </tr>
-        #end
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            #if($port)
+                #foreach($item in $!port)
+                <tr>
+                    <td>$!item.protocol</td>
+                    <td>$!item.receive</td>
+                    <td>$!item.send</td>
+                    <td>$!item.local</td>
+                    <td>$!item.foreign</td>
+                    <td>$!item.status</td>
+                    <td>$!item.name</td>
+                </tr>
+                #end
+            #else
+            <tr>
+                <td colspan=7 style="text-align:center">无数据</td>
+            </tr>
+            #end
+        </tbody>
+    </table>
+</div>
 
 </body>
 <script type="text/javascript">
-    ## function loadSuccess() {
-    ##     table.render({
-    ##         id: 'tab_ram',
-    ##         elem: '#tab_ram',
-    ##         url: '/manage/internal/list?tag=$!internal.tag',
-    ##         height: 'full-52',
-    ##         even: true,
-    ##         cols: [[
-    ##             {field: 'pid', title: '进程id '},
-    ##             {field: 'USER', title: '所有者'},
-    ##             {field: 'PR', title: '优先级'},
-    ##             {field: 'NI', title: 'nice值'},
-    ##             {field: 'VIRT', title: '使用虚拟内存'},
-    ##             {field: 'RES', title: '使用物理内存'},
-    ##             {field: 'SHR', title: '共享内存'},
-    ##             {field: 'S', title: '进程状态'},
-    ##             {field: '%CPU', title: '占用CPU'},
-    ##             {field: '%MEM', title: '占用物理内存'},
-    ##             {field: 'TIME+', title: '时间总计'},
-    ##             {field: 'COMMAND', title: '进程名称'}
-    ##         ]],
-    ##         loading: true,
-    ##         response: {
-    ##             statusCode: 200
-    ##         }
-    ##     });
-    ## }
+
 </script>
 </html>
