--- a/src/main/resources/vm/welcome.vm
+++ b/src/main/resources/vm/welcome.vm
@@ -72,7 +72,7 @@
 </body>
 <script>
     function loadSuccess() {
-        var ws;
+        var ws, myEcharts;
         loadFirstEcharts();
 
         function loadFirstEcharts() {
@@ -168,7 +168,9 @@
                 },
                 series: value
             };
-            var myEcharts = echarts.init(document.getElementById('echarts'));
+            if (!myEcharts) {
+                myEcharts = echarts.init(document.getElementById('echarts'));
+            }
             myEcharts.setOption(option);
         }
     }
